# demos

intra_process_demo/: CMakeLists.txt
intra_process_demo/include/intra_process_demo/image_pipeline/: common.hpp
picky_robot/: README.md
picky_robot/linemod_basic_detector/: CMakeLists.txt  package.xml
picky_robot/linemod_basic_detector/include/linemod_basic_detector/: linemod.hpp  linemod_node.hpp  linemod_train_virtual.hpp
picky_robot/linemod_basic_detector/src/: linemod.cpp  linemod_pipeline.cpp  linemod_train_virtual.cpp
picky_robot/picky_robot/: CMakeLists.txt  package.xml  setup.py
picky_robot/picky_robot/nodes/: picky_robot.py  ur5_motion.py  ur5_pusher.py
picky_robot/picky_robot/src/: linemod_pipeline.cpp
vision_examples/: README.md
vision_examples/face_detector/: package.xml
vision_examples/linemod_detector/: CMakeLists.txt  package.xml
vision_examples/linemod_detector/include/linemod_detector/: linemod.hpp  linemod_node.hpp
vision_examples/linemod_detector/src/: linemod.cpp  linemod_train.cpp
vision_examples/ork_renderer/: CMakeLists.txt
vision_examples_2/face_detector/: CMakeLists.txt
vision_examples_2/face_detector/src/: linemod.cpp  linemod.hpp  linemod_node.hpp  linemod_trainer.cpp
vision_examples_2/linemod_detector/: CMakeLists.txt  package.xml
vision_examples_2/linemod_detector/include/linemod_detector/: linemod.hpp  linemod_node.hpp  linemod_train.hpp
vision_examples_2/linemod_detector/src/: linemod.cpp  linemod_detect.orig.cpp  linemod_icp.cpp  linemod_node.cpp  linemod_orig.cpp  linemod_pipeline.cpp  linemod_train.cpp  linemod_train.orig.cpp
