<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>picky_robot</name>
  <version>0.0.0</version>
  <description>
    A robot that pushes things off the table.
  </description>
  <author email="adam.d.allevato@gmail.com">Adam Allevato</author>
  <maintainer email="adam.d.allevato@gmail.com">Adam Allevato</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urx</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>